<resources>
    <string name="app_name">Book Demo</string>
    <string name="play_pause">Play/Pause</string>
    <string name="book_cover">Book cover</string>
    <string name="next_chapter">Next chapter</string>
    <string name="prev_chapter">Previous chapter</string>
    <string name="increase_speed">Increase speed</string>
    <string name="decrease_speed">Decrease speed</string>
    <string name="time_left_format">-%1$s</string>
    <string name="content_summary">Book Audio Player</string>
    <string name="content_summary_description">Listening to book summary</string>
    <string name="stop_label">Stop</string>
    <string name="play_label">Play</string>
    <string name="pause_label">Pause</string>
</resources>